flaskr/static/index-style.css
/* ... */
h1, h2, h3, h4, ul{
    padding: 0;
    margin: 0;
}

ul{
    list-style: none;
}

/* TEXT-STYLES */
.bold-uppercase-normal{
    font-family: var(--text);
    text-transform: uppercase;
    letter-spacing: 0.05em;
    font-weight:700;
    font-size: 1.1rem;
    padding: 0.5em 0;
}

.bold-uppercase-small{
    font-family: var(--text);
    text-transform: uppercase;
    font-weight:700;
    font-size: 0.8rem;
    padding: 0.2em 0;
}

.curly-title-like{
    font-size: 2.5rem;
    font-family: var(--title);
    text-transform: capitalize;
    font-weight: 100;
    color:var(--purple);
    letter-spacing: 0.05em;
    padding: 0.5em 0;
}

.simple-text{
    font-size: 1.1rem;
    padding: 0.2em 0;
}

.simple-text-small{
    font-size: 0.8rem;
    padding: 0.2em 0;
}

.text-unimportant-title{
    font-weight: 200;
    font-size: 1.2rem;
    padding: 0.4em 0;
}

.page-title-text{
    font-size: 2rem;
    font-weight: 200;
    padding: 0.6em 0;
}

/* TEXT-STYLES END */

.wide-purple-bk{
    background-color: rgba(107, 57, 100, 0.9);
    margin: 0;
    color: var(--white);
    text-align: center;
}

.multiple-recipe-cards, .searched-recipes-ul{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    overflow: hidden;
    width: 100%;
}

.mini-recipe-card{
    display:flex;
    flex-direction: column-reverse;
    width: 100px;
    max-height: 120px;
    min-height: 120px;
    overflow: hidden;
}
.mini-recipe-card img{
    min-height: 100px;
    width:100%;
    object-fit:cover;
}

.recipe-card-cube, .mini-recipe-card{
    margin: 1em;
    box-shadow: 2px 2px 10px var(--midpurple);
    text-align: center;
}

.recipe-card-cube{
    display: grid;
    grid-template-rows: repeat(10, 1fr);
    width: 17%;
    transition: .3s ease-in-out;
}
@media (max-width: 1200px){
    .recipe-card-cube{
        width: 20%;
    }
}
@media (max-width: 1000px){
    .recipe-card-cube{
        width: 25%;
    }
}
@media (max-width: 725px){
    .recipe-card-cube{
        width: 35%;
    }
}
@media (max-width: 550px){
    .recipe-card-cube{
        width: 55%;
    }
}

.recipe-card-cube:hover, .mini-recipe-card:hover{
    box-shadow: 4px -3px 5px var(--midpurple);
    transform: scale(1.1);
}

.recipe-card-cube img {
    width:100%;
    object-fit:cover;
    grid-column: 1/2;
}
.recipe-card-cube img {
    min-width: 200px;
    max-height: 250px;
    min-height: 250px;
    grid-row: 1/11;
}

.recipe-card-cube h3{
    grid-column: 1/2;
    z-index: 1;
    background-color: rgba(129, 95, 125, 0.9);
    color: var(--white);
    padding:0.5em 1em 0.6em 1em; 
    align-self: center;
    grid-row: 8/11;
}

.dashboard-card-shape{
    padding:1em 2em;
    margin:0;
    box-shadow: 0px 0px 10px var(--midpurple);
    border-radius: 10px;
}

.decoration-line {
    height: 3px;
    width: 10%;
    background-color: var(--purple);
    border-radius: 5px;
}

.divider{
    height: 1px;
    width: 100%;
    background-color: var(--grey);
}


.button {
    padding: 0.5em 2.5em;
    border: none;
    background-color: var(--orange);
    font-family: var(--text);
    color: var(--white);
    text-transform: uppercase;
    letter-spacing: 0.05em;
    font-weight:700;
    font-size: 1.1rem;
}

.button-thin{
    padding: 0.5em 2.5em;
    border: none;
    font-family: (var(--text));
    background-color: var(--purple);
    color: var(--white);
    text-transform: uppercase;
    letter-spacing: 0.05em;
    font-weight:200;
    font-size: 1.1rem;
}

.button:hover, 
.button-thin:hover, 
.button-thin.cleanCurrentCalendar:hover, 
.saved-calendar-button:hover {
    background-color: var(--black);
    cursor: pointer;
    color: var(--white);
}

.button:disabled{
    background-color: var(--grey);
}

.save-calendar-changes{
    background-color: var(--purple);
    border:none;
    box-shadow: var(--purpleboxshadow);
    color:white;
    font-family: var(--text);
    padding: 0.5rem;
    border-radius: 10px;
}
.save-calendar-changes:hover{
    background-color: var(--midpurple);
    cursor: pointer;
}

.previous-day-btn, .next-day-btn{
    border: none;
    background-color: var(--orange);
    padding: 0.5rem 1rem;
    margin: -0.5rem auto;
}

input[type="file"] {
    display: none;
}

.addedFilename{
    font-style: italic;
    font-size: 0.8em;
}

.modal {
    display: none; 
    position: fixed; 
    z-index: 1; 
    left: 0;
    top: 0;
    width: 100%;
    height: 100%; 
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
}

.close {
    color: var(--white);
    position: absolute;
    top: -0.2em;
    right: 0.2em;
    padding: 0.2em;
    font-size: 2em;
}

.close:hover,
.close:focus {
    color: var(--purple);
    text-decoration: none;
    cursor: pointer;
}

.return-to-previous-page{
    align-self: center;
    margin: 0 auto;
}

.flash-message{
    text-align: center;
    margin-bottom:0.2em;
}
.flash-message.Error{
    background-color: var(--grey);
    padding: 1em;
    box-shadow: 0px 2px 5px var(--textgrey);
    color: var(--textgrey);
}
.flash-message.Success{
    background-color: var(--orange);
    padding: 1em;
    box-shadow: 0px 2px 5px var(--dkorange);
    color: var(--white);
    font-weight: bold;
}

/* navigation style ------------------*/

nav.bold-uppercase-normal {
    margin: 0 auto;
    max-width: 1200px;
    padding: 0.5em 0 0 0;
}

.nav-ul {
    display: flex;
    justify-content: space-around;
    align-items: stretch;
    margin: 0;
    padding:0 1em;
    flex-flow: row wrap;
}

.nav-li {
    list-style-type: none;
    display: flex;
    padding: 0 0.5em;
    align-items: center;
    margin: 0.5em 0 0 0;
}

.nav-li a {
    text-decoration: none;
    color: var(--black);
}

.title {
    margin-right: auto;
}

.title a{
    color:var(--purple);
}

.nav-ul .icon{
    font-size: 1.1em;
    color: var(--purple);
}

.menu-icon, .mobile{
    display:none;
}

.active{
    border-bottom: 2px solid var(--purple);
}
/* ... */

